Change from H2 memory to PostgreSQL Also cleaned up POM of deck